# Adaptive-Learning-AI

./: .gitignore  README.md  render.yaml
backend/: .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 327aeb2a65ec_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  cache.py  embeddings.py  evaluation.py  gemini.py  json_contract.py  observability.py  openrouter.py  platform.py  repair.py  structured.py  validation.py
backend/app/api/: dependencies.py  error_handlers.py
backend/app/config/: __init__.py  ai_settings.py  logging.py  settings.py
backend/app/core/: __init__.py  enums.py
backend/app/database/: __init__.py  engine.py  initialization.py  session.py
backend/app/exceptions/: __init__.py  base.py
backend/app/middleware/: __init__.py  payload_limit.py  request_context.py
backend/app/models/: __init__.py  base.py  cache.py  conversation.py  evaluation.py  progress.py  project.py  prompt.py  resource.py  roadmap.py
backend/app/prompts/: __init__.py  manager.py
backend/app/rag/: __init__.py  chroma.py  chunker.py  context.py  documents.py  indexer.py  retriever.py
backend/app/repositories/: __init__.py  sql.py
backend/app/schemas/: __init__.py  ai_outputs.py  chat.py  common.py  progress.py  project.py  resource.py  roadmap.py
backend/app/services/: chat_service.py  progress_service.py  project_service.py  resource_service.py  roadmap_service.py
backend/app/utils/: __init__.py  hashing.py  time.py
backend/tests/: conftest.py
(+87 files in other folders)
